# tunr

./: .gitignore  .golangci.yml  .goreleaser.yaml  .tunr.schema.json  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  RELAY_SERVER.md  SECURITY.md  docker-compose.yml  go.mod  go.sum  install.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cmd/tunr/: config.go  doctor.go  doctor_test.go  headers.go  login.go  logs.go  logs_test.go  main.go  mcp.go  open.go  replay.go  root.go  root_test.go  runtime_env.go  service.go  share.go  share_test.go  start.go  status.go  status_test.go  stop.go  stop_test.go  tcp.go  tls_cmd.go  udp.go  uninstall.go  uninstall_test.go  up.go  update.go  update_test.go  version.go
docs/: ARCHITECTURE.md  CLI.md  COMPLIANCE.md  CONTRIBUTING.md  DEPLOYMENT.md  FEATURES.md  LAUNCH_WALKTHROUGH.md  SUPABASE_RLS.sql  VIBECODER_FEATURES.md  walkthrough.md.resolved
internal/api/: server.go
internal/auth/: auth.go
internal/billing/: paddle.go  paddle_test.go
internal/config/: config.go  config_test.go
internal/daemon/: daemon.go
landing/: app.js  docs.css  docs.html  index.html  privacy.html  style.css  terms.html
relay/: Dockerfile  fly.toml  go.mod  go.sum
scripts/: full_e2e_matrix.sh  full_feature_test_suite.sh
sdk/python/: README.md  pyproject.toml
sdk/python/tunr/: __init__.py  client.py
vscode-tunr/: extension.js  package.json
(+57 files in other folders)
