[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tunr"
version = "0.3.0"
description = "Official Python SDK for tunr — localhost tunneling made simple."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/ahmetvural79/tunr"
Documentation = "https://tunr.sh/docs"
